
           <p i18n:domain="formulator" i18n:translate="" 
              tal:content="my_error_text"></p>

      - Test framework now uses (and requires) ZopeTestCase. This allowed
        some testing setup cruft to be removed.


    Bugs Fixed

      - Added explicit security declatation for the "fieldAdd" DTML-file.
        Fixed a problem with copy & paste fields in Zope 2.7.3.

  1.7.0
 
    Features Added

      - Added FormulatorFormFile, which can be used to load XML
        representations of forms from filesystem code like
        PageTemplateFile.

      - i18n-id and i18n-domain support for forms, including
        descriptions, error-messages, etc

    Bugs Fixed

      - changed way selection fields check whether their items
        property is a list or single item.

      - Made system not reregister help for Fields which already have
        help, to avoid ZODB writes on startup.

      - Fixed singleton submit button that wasn't properly closed.

      - Zope 2.7 compatibility: In Zope 2.7 the behaviour when trying
        to construct invalid DateTime object changed from raising
        string exceptions to class based exceptions.
         This has caused the DateTimeField's to pass through the new
        exceptions instead of converting them to ValidationError.
         changed:
             Validator.py:DateTimeValidator and import section;
             test/test_validators.py:DateTimeValidatorTestCase

      - PatternFields are no longer documented as "experimental"
        in the Help system.
         changed:
             Validator.py:PatternValidator

      - DateTime values field values (like start or end time) have
        been wrongly represented as strings in the XML representation.
         changed:
             XMLToForm.py, FormToXML.py.
             test/test_serialize.py

      - Fixed bug with rendering of ListField's similar to the
        "single element list with one two-char string" bug fixed
        for validation in 1.6.2